Update requirements.txt and README for numpy 1.18 issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ torch>=1.4.0
 timm>=0.1.20
 pycocotools
 pyyaml
+
+# better to manually install pillow-simd
+Pillow
+
+# conflict between pycocotools and numpy 1.18.+
+numpy<=1.17.5
+
+# pycocotools needs this but doesn't have dep
+matplotlib
