--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: Community Discussions
+    url: https://github.com/rwightman/efficientdet-pytorch/discussions
+    about: Issues are exclusively for concrete features and bugs. Please use Discussions for questions, sharing, other ideas.
